# whenami

./: .gitignore  LICENSE  README.md  config.json.example  demo.tape  pyproject.toml  pytest.ini  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish.yml
src/whenami/: __init__.py  main.py
src/whenami/utils/: __init__.py  auth.py  calendar.py  config.py  llm.py  nlp.py
tests/: __init__.py  conftest.py  test_cli_args.py  test_event_names.py  test_llm.py  test_main.py  test_time.py
